# turbo-umbrella

./: .dockerignore  .gitignore  Dockerfile  fly.toml  manage.py  pyproject.toml
form/: admin.py  forms.py  models.py  service.py  views.py
form/migrations/: 0001_initial.py
form/templates/: form.html
superform/: asgi.py  settings.py  urls.py  wsgi.py
theme/static_src/: package-lock.json
users_commands/management/commands/: create_admin.py
